sidebar gap fix

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     position: fixed;
-    top: 56px;
+    top: 0px;
     left: 0;
     bottom: 0;
     width: var(--sidebar-width);
