--- a/src/main.css
+++ b/src/main.css
@@ -170,7 +170,7 @@ body {
 
     position: fixed;
 
-    top: 56px;
+    top: 0px;
 
     left: 0;
 
